<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.alarmprot.MainActivity"
    tools:showIn="@layout/activity_main">

    // added from: http://www.tutorialspoint.com/android/android_timepicker_control.htm
    // date: 6/4/16
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_pick"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/timePicker1"
        android:layout_centerHorizontal="true" />


    <!-- android:onClick="setTime" , kalder metode "setTime" i MainActivity.java -->
    <Button
        android:id="@+id/set_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setTime"
        android:text="@string/time_save"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_button"
        android:id="@+id/alarm_on"
        android:layout_above="@+id/update_text"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/off_button"
        android:id="@+id/alarm_off"
        android:layout_above="@+id/update_text"
        android:layout_toStartOf="@+id/set_button" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_current"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_selected"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <TimePicker
        android:id="@+id/timePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="updatetext"
        android:id="@+id/update_text"
        android:layout_below="@+id/set_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" />


</RelativeLayout>
